# ycBio

./: .env.example  .gitignore  CLAUDE.md  README.md  SPECS.md  bioos-claude-code-prompt (1).md  pyproject.toml  start.sh  stop.sh
agent_docs/: architecture.md  code_conventions.md  modal_setup.md  moe_prompts.md  tamarind_api.md  testing_guide.md
app/: main.py  settings.py
app/integrations/: pipeline_registry.py  redis_store.py
app/moe/: comparator.py  critic.py  statistician.py  synthesizer.py  utils.py
app/orchestrator/: graph.py  state.py  tools.py
app/utils/: mutations.py
app/validation/: auditor.py  schemas.py
app/workers/: modal_runner.py
apps/api/: alembic.ini  main.py  requirements.txt  seed.py  test_chembl.py  test_pubmed.py
apps/api/agents/: orchestrator.py
apps/api/alembic/: env.py
apps/api/core/: auth.py  config.py  database.py  files.py  store.py
apps/api/models/: __init__.py  ai_models.py  molecule.py  pipeline_run.py  report.py  user.py
apps/api/routers/: ai_assistant.py  auth.py  molecules.py  pipelines.py  reports.py  runs.py
apps/api/schemas/: __init__.py  auth.py  (+2 more)
apps/web/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
biosync_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
scripts/: fetch_job.py
tests/: conftest.py
tests/e2e/: README.md
tests/integration/: test_api.py  test_redis_store.py
tests/unit/: test_pipeline_registry.py  test_tools.py  test_validation.py
(+48 files in other folders)
